--- a/client/src/index.css
+++ b/client/src/index.css
@@ -71,13 +71,8 @@
   }
 
   @keyframes shimmer {
-    0% {
-      background-position: -1000px 0;
-    }
-
-    100% {
-      background-position: 1000px 0;
-    }
+    0% { transform: translateX(-100%); }
+    100% { transform: translateX(100%); }
   }
 
   @keyframes slideInRight {
